update deps and add test scripts

--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage"
+    "test:coverage": "vitest --coverage",
+    "test:contracts": "npx hardhat test",
+    "test:contracts:factory": "npx hardhat test test/AirdropFactory.test.js",
+    "test:contracts:allocation": "npx hardhat test test/AirdropAllocation.test.js",
+    "test:contracts:claim": "npx hardhat test test/AirdropClaim.test.js",
+    "test:contracts:integration": "npx hardhat test test/AirdropIntegration.test.js",
+    "compile": "npx hardhat compile"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -69,21 +75,21 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
-    "@fhevm/hardhat-plugin": "^0.1.0",
-    "@fhevm/solidity": "^0.8.0",
+    "@fhevm/hardhat-plugin": "0.3.0-1",
+    "@fhevm/solidity": "^0.9.1",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.16.5",
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@zama-fhe/relayer-sdk": "0.3.0-5",
     "autoprefixer": "^10.4.21",
     "dotenv": "^17.2.3",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "ethers": "^6.15.0",
-    "fhevm": "^0.5.9",
     "globals": "^15.15.0",
     "hardhat": "^2.26.3",
     "lovable-tagger": "^1.1.11",
